codex-rs/tui-pty-e2e/tests/snapshots/exit_statistics__exit_message_ctrl_d.snap
---
source: tui-pty-e2e/tests/exit_statistics.rs
expression: normalize_for_snapshot(session.screen_contents())
---
› hello world


■ Operation 'AddToHistory' is not supported in ACP mode

────────────────────────────────────────────────────────────────────────────────────────────────────

• Sure, I'll help you with that!

╭───────────────────────────────────────────────╮
│  Goodbye! Thanks for using Nori.      │
│                                       │
│ Session: 019bb411-8560-7a72-bd37-9e8402b84f04 │
│                                       │
│ Messages      User: 1  Assistant: 0  Total: 1 │
│  Tool Calls    (none)                 │
│                                       │
│  Skills Used                          │
│    (none)                             │
│                                       │
│  Subagents Used                       │
│    (none)                             │
╰───────────────────────────────────────╯


› [DEFAULT_PROMPT]

  ⎇ master · ? for shortcuts
