codex-rs/tui-pty-e2e/tests/snapshots/exit_statistics__exit_message_slash_exit.snap
---
source: tui-pty-e2e/tests/exit_statistics.rs
expression: normalize_for_snapshot(session.screen_contents())
---
  Run 'npx nori-skillsets init' to set up Nori AI enhancements

› hello world


• Sure, I'll help you with that!

╭───────────────────────────────────────────────╮
│  Goodbye! Thanks for using Nori.      │
│                                       │
│  Session: [SESSION_ID]                │
│                                       │
│ Messages      User: 1  Assistant: 0  Total: 1 │
│  Tool Calls    (none)                 │
│                                       │
│  Skills Used                          │
│    (none)                             │
│                                       │
│  Subagents Used                       │
│    (none)                             │
╰───────────────────────────────────────╯
